# kokuchi-kun

./: .gitignore  .prd.env.template  AGENTS.md  CLAUDE.md  README.md  VERSIONING.md  bot.py  config.yaml  config.yaml.template  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
cogs/: admin.py  announcement.py  general.py
data/: pending.json
docs/: index.md
docs/.vitepress/: config.mts
docs/en/: commands.md  faq.md  getting-started.md  index.md  reactions.md  workflow.md
docs/ja/: commands.md  faq.md  getting-started.md  reactions.md  workflow.md
scripts/: bump_version.py  migrate_to_firestore.py
tests/: test_ai_processor.py  test_announcement_state.py  test_auth_retry.py  test_cogs.py  test_discord_auth.py  test_persistence.py  test_scheduler.py  test_scheduler_integration.py  test_vrchat_api.py
utils/: ai_processor.py  announcement_state.py  messages.py  models.py  persistence.py  scheduler.py  version.py  vrchat_api.py
